# digital_inventory_system

./: 1main.cpp  CMakeLists.txt  CmakeLists.txt  README.md  datatest.cpp  inventory.txt  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  product.txt  sample.py  tempCodeRunnerFile.cpp
.github/workflows/: ci.yml
cui_header/: confirmation.h  file_handling.h  item_display.h  item_input.h  login.h  men_functions.h  menu.h  validation.h
cui_src/: confirmation.cpp  file_handling.cpp  item_display.cpp  item_input.cpp  login.cpp  main.cpp  men_functions.cpp  menu.cpp  validation.cpp
digital_inventory_system/: CMakeLists.txt  mainwindow.h
headers/: exitconfirmation.h  inputvalidator.h  inventory.h  login.h  loginwindow.h  mainwindow.h  men_functions.h  menu.h  part.h  validation.h
src/: exitconfirmation.cpp  inputvalidator.cpp  login.cpp  loginwindow.cpp  mainwindow.cpp  men_functions.cpp  menu.cpp  validation.cpp
ui/: inputvalidator.cpp  inputvalidator.h  loginwindow.ui  mainwindow.ui
